--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.softhouse.workingout">
 
+<!--    Permission for internet-->
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="com.google.android.things.permission.MANAGE_SENSOR_DRIVERS" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+<!--    Permission for sensor driver usage in the application-->
+    <uses-permission android:name="com.google.android.things.permission.MANAGE_SENSOR_DRIVERS"/>
+
+<!--    Permission for foreground service permission (for notification, etc)-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
+<!--    Permission for step counter-->
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <application
             android:allowBackup="true"
@@ -22,8 +31,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <service android:name=".service.CompassService" />
-        <receiver android:name=".service.CompassService$ActionListener"/>
+        <service android:name=".service.CompassService"/>
+        <receiver android:name=".service.StopNotificationListener"/>
         <meta-data
                 android:name="preloaded_fonts"
                 android:resource="@array/preloaded_fonts"/>
