create step tracking system

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             </intent-filter>
         </activity>
         <service android:name=".service.CompassService"/>
+        <service android:name=".service.StepCounterService"/>
         <receiver android:name=".service.StopNotificationListener"/>
         <meta-data
                 android:name="preloaded_fonts"
