compass sensor bugfix not continuosly running in the background

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
         <service android:name=".service.CompassService"/>
-        <service android:name=".service.StepCounterService"/>
+        <service android:name=".service.StepDetectorService"/>
         <receiver android:name=".service.StopNotificationListener"/>
         <meta-data
                 android:name="preloaded_fonts"
