--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        multiDexEnabled true
+
         vectorDrawables.useSupportLibrary = true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -68,6 +70,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation 'pub.devrel:easypermissions:3.0.0'
+
+    implementation 'com.google.android.gms:play-services-maps:11.4.2'
+
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation("com.squareup.okhttp3:logging-interceptor:4.2.0")
     testImplementation 'junit:junit:4.12'
