--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,7 @@ android {
         versionName "1.0"
 
         multiDexEnabled true
-
         vectorDrawables.useSupportLibrary = true
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -46,17 +44,26 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
 }
 
 dependencies {
+    def activity_version = "1.2.2"
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    // Android Activity context (single activity - many fragment architecture)
+    implementation "androidx.activity:activity-ktx:$activity_version"
+
+
+    // Material Design
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+
+    // Navigation
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -64,16 +71,20 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.5"
 
+    // Recycler view
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // Easy Permission
     implementation 'pub.devrel:easypermissions:3.0.0'
-
 
     // Google Maps Location Services
     implementation 'com.google.android.gms:play-services-location:17.0.0'
@@ -81,8 +92,11 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     // Room
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-runtime:2.3.0-alpha01"
+    kapt "androidx.room:room-compiler:2.3.0-alpha01"
+
+    // Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.2.5"
 
     // Dagger
     implementation "com.google.dagger:dagger:2.25.4"
