chore : Finish creating notification builder template for application
Detail :
- created dependencies injection for stopping notification (still fixing)
- created dependencies injection for seeing notification on current run

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <service android:name=".service.GeoTrackerService"
                  android:foregroundServiceType="location" />
 
-        <receiver android:name=".service.StopNotificationListener"/>
+        <receiver android:name=".listener.StopNotificationListener"/>
         <meta-data
                 android:name="preloaded_fonts"
                 android:resource="@array/preloaded_fonts"/>
