--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,6 @@ dependencies {
     // Android Activity context (single activity - many fragment architecture)
     implementation "androidx.activity:activity-ktx:$activity_version"
 
-
     // Material Design
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -110,10 +109,13 @@ dependencies {
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
-
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01"
     kapt "androidx.hilt:hilt-compiler:1.0.0-alpha01"
 
+    // Material Calender
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
+
+    // Utilities
     implementation("com.squareup.okhttp3:logging-interceptor:4.2.0")
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
