--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        // Calender Material Repository
+        maven { url 'https://jitpack.io' }
     }
 }
 
