--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     def activity_version = "1.2.2"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
