--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,9 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
-        <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="@string/google_maps_key"/>
+<!--        <meta-data-->
+<!--                android:name="com.google.android.geo.API_KEY"-->
+<!--                android:value="@string/google_maps_key"/>-->
 
         <uses-library
                 android:name="org.apache.http.legacy"
@@ -69,6 +69,11 @@
         <meta-data
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version"/>
+
+        <meta-data
+                android:name="com.google.android.maps.v2.API_KEY"
+                android:value="@string/google_maps_key" />
+        
     </application>
 
 </manifest>
