done : Map view for details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.softhouse.workingout">
 
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the "MyLocation" functionality.
-    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
     <!-- Permission for internet -->
     <uses-permission android:name="android.permission.INTERNET"/> <!-- Permission for sensor driver usage in the application -->
     <uses-permission android:name="com.google.android.things.permission.MANAGE_SENSOR_DRIVERS"/> <!-- Permission for foreground service permission (for notification, etc) -->
@@ -34,9 +28,9 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
-<!--        <meta-data-->
-<!--                android:name="com.google.android.geo.API_KEY"-->
-<!--                android:value="@string/google_maps_key"/>-->
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key"/>
 
         <uses-library
                 android:name="org.apache.http.legacy"
@@ -70,10 +64,10 @@
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version"/>
 
-        <meta-data
-                android:name="com.google.android.maps.v2.API_KEY"
-                android:value="@string/google_maps_key" />
-        
+<!--        <meta-data-->
+<!--                android:name="com.google.android.maps.v2.API_KEY"-->
+<!--                android:value="@string/google_maps_key" />-->
+
     </application>
 
 </manifest>
