--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
             android:name=".BaseApplication"
-            android:allowBackup="true"
+            android:allowBackup="false"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
@@ -63,11 +63,6 @@
         <meta-data
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version"/>
-
-<!--        <meta-data-->
-<!--                android:name="com.google.android.maps.v2.API_KEY"-->
-<!--                android:value="@string/google_maps_key" />-->
-
     </application>
 
 </manifest>
