--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+
 
     // Navigation
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
