init scheduler with alarm manager

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
     defaultConfig {
         applicationId "com.softhouse.workingout"
-        minSdkVersion 19
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -45,6 +45,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude("META-INF/*.kotlin_module")
+    }
 }
 
 dependencies {
@@ -55,6 +66,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
     // Android Activity context (single activity - many fragment architecture)
     implementation "androidx.activity:activity-ktx:$activity_version"
@@ -65,6 +78,7 @@ dependencies {
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 
     // Navigation
+    implementation("androidx.fragment:fragment-ktx:1.2.5")
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -122,5 +136,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation(project(":androidutils"))
+    implementation("com.jakewharton.timber:timber:4.7.1")
+    implementation("com.chibatching.kotpref:kotpref:2.13.0")
+    implementation("com.github.judemanutd:autostarter:1.0.8")
+    implementation("org.permissionsdispatcher:permissionsdispatcher:4.8.0")
+    implementation("org.permissionsdispatcher:permissionsdispatcher-processor:4.8.0")
 
+    // Koin
+    implementation("org.koin:koin-android:2.2.2")
+    implementation("org.koin:koin-androidx-viewmodel:2.2.2")
+    implementation("org.koin:koin-androidx-scope:2.2.2")
 }
