--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:2.3.0-alpha01"
+    implementation "androidx.room:room-ktx:2.3.0-alpha01"
     kapt "androidx.room:room-compiler:2.3.0-alpha01"
 
     // Kotlin Extensions and Coroutines support for Room
