--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <!-- Permission for internet -->
-    <uses-permission android:name="android.permission.INTERNET"/> <!-- Permission for sensor driver usage in the application -->
-    <uses-permission android:name="com.google.android.things.permission.MANAGE_SENSOR_DRIVERS"/> <!-- Permission for foreground service permission (for notification, etc) -->
+    <uses-permission
+            android:name="android.permission.INTERNET"/> <!-- Permission for sensor driver usage in the application -->
+    <uses-permission
+            android:name="com.google.android.things.permission.MANAGE_SENSOR_DRIVERS"/> <!-- Permission for foreground service permission (for notification, etc) -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/> <!-- Permission for step counter -->
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -55,7 +57,8 @@
                 android:name=".service.GeoTrackerService"
                 android:foregroundServiceType="location"/>
 
-        <receiver android:name=".listener.StopNotificationListener"/>
+        <receiver android:name=".listener.ScheduleOnStartReceiver"/>
+        <receiver android:name=".listener.ScheduleOnStopReceiver"/>
 
         <meta-data
                 android:name="preloaded_fonts"
