--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,9 @@ dependencies {
     // Two Pane Layout
     implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha01"
 
+    // Notification Library
+    implementation "io.karn:notify:1.3.0"
+
     // Utilities
     implementation("com.squareup.okhttp3:logging-interceptor:4.2.0")
     testImplementation 'junit:junit:4.12'
