--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <!-- Permission for internet -->
     <uses-permission
-            android:name="android.permission.INTERNET"/> <!-- Permission for sensor driver usage in the application -->
+            android:name="android.permission.INTERNET"/>
+
+    <!-- Permission for sensor driver usage in the application -->
     <uses-permission
             android:name="com.google.android.things.permission.MANAGE_SENSOR_DRIVERS"/> <!-- Permission for foreground service permission (for notification, etc) -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/> <!-- Permission for step counter -->
